# test-liquid-orchard-yoshida

./: main.cabal  package.yaml  stack.yaml
effect-monad/: effect-monad.cabal  stack.yaml
effect-monad/src/Control/: Effect.hs
effect-monad/src/Control/Coeffect/: Coreader.hs
effect-monad/src/Control/Effect/: Maybe.hs  Monad.hs  Parameterised.hs  ReadOnceReader.hs  State.hs  Writer.hs
effect-monad/src/Control/Effect/Helpers/: List.hs
effect-monad/src/Control/Effect/Parameterised/: ExtensibleState.hs  SafeFiles.hs
sessions-in-haskell/: effect-sessions.cabal  stack.yaml
sessions-in-haskell/Control/Effect/: Sessions.hs
sessions-in-haskell/Control/Effect/Sessions/: Operations.lhs
src/: EMonad.hs  Fork.hs  Lib.hs
src/Control/: Effect.hs
src/Control/Effect/: Sessions.hs
src/Control/Effect/Sessions/: Operations.hs  Operations.lhs  Process.hs  Process.lhs
type-level-sets/: example.hs  stack.yaml  type-level-sets.cabal
type-level-sets/src/Data/Type/: Map.hs  Set.hs
